--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin-top: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  margin-bottom: 50px;
+  margin-top: 50px;
+  font-weight: 900;
+  font-size: 50px;
+  color: cadetblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span {
+  background-color: cornflowerblue;
+  padding: 10px;
+  border-radius: 50%;
+  color: azure;
+  font-weight: 900;
+  padding: 50px;
+  font-size: 50px;
+}
+
+#countTime {
+  padding: 50px;
+  font-size: 100px;
 }
